fix: add dark mode to `WordChip`

--- a/src/index.css
+++ b/src/index.css
@@ -74,14 +74,20 @@ body,
 
 @layer components {
   .word-chip {
-    @apply border-indigo-400 border-solid border-2 rounded-md bg-white
-      hover:bg-indigo-100 w-auto h-12 px-5 py-1 flex flex-row gap-3
+    @apply border-indigo-400 dark:border-blue-gray-800 border-solid border-2
+      rounded-md bg-white
+    dark:bg-blue-gray-700 hover:bg-indigo-100 dark:hover:bg-blue-gray-600
+      w-auto h-12 px-5 py-1 flex flex-row gap-3
       cursor-pointer transition-colors duration-100;
+  }
+
+  .word-chip > span {
+    @apply font-mono font-light text-gray-600 dark:text-gray-300 md:text-3xl sm:text-2xl;
   }
 
   .word-chip-tooltip {
     @apply flex items-center justify-center pointer-events-none py-1 px-2
-      bg-white dark:bg-gray-700 rounded-lg shadow-md text-gray-500
+      bg-white dark:bg-gray-800 rounded-lg shadow-md text-gray-500
       dark:text-gray-300 text-xs whitespace-nowrap;
   }
 }
